security full vrode