@@ -51,6 +51,13 @@ public class MasterService {
         this.revokedTokenService = revokedTokenService;
     }
 
+    // без ограничений
+    @Transactional
+    public MasterDTO saveMaster(Master master) {
+        master.setPassword(passwordEncoder.encode(master.getPassword()));
+        return dtoConverter.convertToMasterDTO(masterRepository.save(master));
+    }
+
     // для всех клиентов и мастеров
     public List<MasterDTO> getAllMasters() {
         return masterRepository.findAll().stream()
@@ -68,61 +75,6 @@ public class MasterService {
         return masterRepository.findByName(name).map(dtoConverter::convertToMasterDTO);
     }
 
-    // не надо
-    public Optional<MasterDTO> getMasterByPhone(String phone) {
-        return masterRepository.findByPhone(phone).map(dtoConverter::convertToMasterDTO);
-    }
-
-    // не надо
-    public Optional<MasterDTO> getMasterByLogin(String login) {
-        return masterRepository.findByLogin(login).map(dtoConverter::convertToMasterDTO);
-    }
-
-    // без ограничений
-    @Transactional
-    public MasterDTO saveMaster(Master master) {
-        master.setPassword(passwordEncoder.encode(master.getPassword()));
-        return dtoConverter.convertToMasterDTO(masterRepository.save(master));
-    }
-
-    // для причастного мастера
-    @Transactional
-    public void deleteMaster(Long masterId) {
-        authService.checkAccessToMaster(masterId);
-        masterRepository.deleteById(masterId);
-    }
-
-    // для причастного мастера
-    @Transactional
-    public Optional<MasterDTO> replaceMaster(Long masterId, Master newMaster) {
-        authService.checkAccessToMaster(masterId);
-        return masterRepository.findById(masterId).map(existingMaster -> {
-            existingMaster.setName(newMaster.getName());
-            existingMaster.setPhone(newMaster.getPhone());
-            existingMaster.setLogin(newMaster.getLogin());
-            existingMaster.setPassword(newMaster.getPassword());
-            return dtoConverter.convertToMasterDTO(masterRepository.save(existingMaster));
-        });
-    }
-
-    // для причастного мастера
-    @Transactional
-    public Optional<MasterDTO> updateMaster(Long masterId, Map<String, Object> updates) {
-        authService.checkAccessToMaster(masterId);
-        return masterRepository.findById(masterId).map(existingMaster -> {
-            if (updates.containsKey("name")) {
-                existingMaster.setName((String) updates.get("name"));
-            }
-            if (updates.containsKey("phone")) {
-                existingMaster.setPhone((String) updates.get("phone"));
-            }
-            if (updates.containsKey("login")) {
-                existingMaster.setLogin((String) updates.get("login"));
-            }
-            return dtoConverter.convertToMasterDTO(masterRepository.save(existingMaster));
-        });
-    }
-
     // для всех клиентов и мастеров
     public List<BeautyServiceDTO> getBeautyServicesByMasterId(Long masterId) {
         return masterRepository.findById(masterId)
@@ -133,40 +85,27 @@ public class MasterService {
                 .orElse(Collections.emptyList());
     }
 
-    // для причастного мастера
-    public List<AppointmentDTO> getAppointmentsByMasterId(Long masterId) {
-        authService.checkAccessToMaster(masterId);
-        return appointmentRepository.findByMasterId(masterId).stream()
-                .map(dtoConverter::convertToAppointmentDTO)
-                .toList();
+    // для всех клиентов и мастеров
+    public Map<LocalDate, List<AvailableTimeSlotDTO>> getAvailableTimeSlots(Long masterId, LocalDate startDate, LocalDate endDate) {
+        Map<LocalDate, List<AvailableTimeSlotDTO>> availableSlotsByDate = new LinkedHashMap<>();
+
+        LocalDate currentDate = startDate;
+        while (!currentDate.isAfter(endDate)) {
+            LocalDate finalDate = currentDate;
+            List<AppointmentDTO> appointments = appointmentRepository.findByMasterId(masterId)
+                    .stream()
+                    .map(dtoConverter::convertToAppointmentDTO)
+                    .filter(appointment -> appointment.getDate().isEqual(finalDate))
+                    .collect(Collectors.toList());
+
+            List<AvailableTimeSlotDTO> availableSlots = calculateAvailableSlots(appointments);
+            availableSlotsByDate.put(currentDate, availableSlots);
+
+            currentDate = currentDate.plusDays(1);
+        }
+
+        return availableSlotsByDate;
     }
-
-    // для причастного мастера
-    @Transactional
-    public MasterDTO addBeautyServiceToMaster(Long masterId, Long beautyServiceId) {
-        authService.checkAccessToMaster(masterId);
-        Master master = masterRepository.findById(masterId)
-                .orElseThrow(() -> new EntityNotFoundException("Master not found"));
-        BeautyService beautyService = beautyServiceRepository.findById(beautyServiceId)
-                .orElseThrow(() -> new EntityNotFoundException("Beauty service not found"));
-
-        master.addBeautyService(beautyService);
-        return dtoConverter.convertToMasterDTO(masterRepository.save(master));
-    }
-
-    // для причастного мастера
-    @Transactional
-    public MasterDTO removeBeautyServiceFromMaster(Long masterId, Long beautyServiceId) {
-        authService.checkAccessToMaster(masterId);
-        Master master = masterRepository.findById(masterId).
-                orElseThrow(() -> new EntityNotFoundException("Master not found"));
-        BeautyService beautyService = beautyServiceRepository.findById(beautyServiceId).
-                orElseThrow(() -> new EntityNotFoundException("Beauty service not found"));
-
-        master.removeBeautyService(beautyService);
-        return dtoConverter.convertToMasterDTO(masterRepository.save(master));
-    }
-
     private List<AvailableTimeSlotDTO> calculateAvailableSlots(List<AppointmentDTO> appointments) {
         LocalTime startOfDay = LocalTime.of(9, 0);
         LocalTime endOfDay = LocalTime.of(19, 0);
@@ -211,26 +150,69 @@ public class MasterService {
         return availableTimeSlots;
     }
 
-    // для всех клиентов и мастеров
-    public Map<LocalDate, List<AvailableTimeSlotDTO>> getAvailableTimeSlots(Long masterId, LocalDate startDate, LocalDate endDate) {
-        Map<LocalDate, List<AvailableTimeSlotDTO>> availableSlotsByDate = new LinkedHashMap<>();
+    // для причастного мастера
+    public List<AppointmentDTO> getAppointmentsByMasterId(Long masterId) {
+        authService.checkAccessToMaster(masterId);
+        return appointmentRepository.findByMasterId(masterId).stream()
+                .map(dtoConverter::convertToAppointmentDTO)
+                .toList();
+    }
 
-        LocalDate currentDate = startDate;
-        while (!currentDate.isAfter(endDate)) {
-            LocalDate finalDate = currentDate;
-            List<AppointmentDTO> appointments = appointmentRepository.findByMasterId(masterId)
-                    .stream()
-                    .map(dtoConverter::convertToAppointmentDTO)
-                    .filter(appointment -> appointment.getDate().isEqual(finalDate))
-                    .collect(Collectors.toList());
+    // для причастного мастера
+    @Transactional
+    public MasterDTO addBeautyServiceToMaster(Long masterId, Long beautyServiceId) {
+        authService.checkAccessToMaster(masterId);
+        Master master = masterRepository.findById(masterId)
+                .orElseThrow(() -> new EntityNotFoundException("Master not found"));
+        BeautyService beautyService = beautyServiceRepository.findById(beautyServiceId)
+                .orElseThrow(() -> new EntityNotFoundException("Beauty service not found"));
 
-            List<AvailableTimeSlotDTO> availableSlots = calculateAvailableSlots(appointments);
-            availableSlotsByDate.put(currentDate, availableSlots);
+        master.addBeautyService(beautyService);
+        return dtoConverter.convertToMasterDTO(masterRepository.save(master));
+    }
 
-            currentDate = currentDate.plusDays(1);
-        }
+    // для причастного мастера
+    @Transactional
+    public MasterDTO removeBeautyServiceFromMaster(Long masterId, Long beautyServiceId) {
+        authService.checkAccessToMaster(masterId);
+        Master master = masterRepository.findById(masterId).
+                orElseThrow(() -> new EntityNotFoundException("Master not found"));
+        BeautyService beautyService = beautyServiceRepository.findById(beautyServiceId).
+                orElseThrow(() -> new EntityNotFoundException("Beauty service not found"));
 
-        return availableSlotsByDate;
+        master.removeBeautyService(beautyService);
+        return dtoConverter.convertToMasterDTO(masterRepository.save(master));
+    }
+
+    // для причастного мастера
+    @Transactional
+    public Optional<MasterDTO> replaceMaster(Long masterId, Master newMaster) {
+        authService.checkAccessToMaster(masterId);
+        return masterRepository.findById(masterId).map(existingMaster -> {
+            existingMaster.setName(newMaster.getName());
+            existingMaster.setPhone(newMaster.getPhone());
+            existingMaster.setLogin(newMaster.getLogin());
+            existingMaster.setPassword(newMaster.getPassword());
+            return dtoConverter.convertToMasterDTO(masterRepository.save(existingMaster));
+        });
+    }
+
+    // для причастного мастера
+    @Transactional
+    public Optional<MasterDTO> updateMaster(Long masterId, Map<String, Object> updates) {
+        authService.checkAccessToMaster(masterId);
+        return masterRepository.findById(masterId).map(existingMaster -> {
+            if (updates.containsKey("name")) {
+                existingMaster.setName((String) updates.get("name"));
+            }
+            if (updates.containsKey("phone")) {
+                existingMaster.setPhone((String) updates.get("phone"));
+            }
+            if (updates.containsKey("login")) {
+                existingMaster.setLogin((String) updates.get("login"));
+            }
+            return dtoConverter.convertToMasterDTO(masterRepository.save(existingMaster));
+        });
     }
 
     // для причастного мастера
@@ -257,5 +239,24 @@ public class MasterService {
             String token = authHeader.substring(7);
             revokedTokenService.revokeToken(token);
         }
+    }
+
+    // для причастного мастера
+    @Transactional
+    public void deleteMaster(Long masterId) {
+        authService.checkAccessToMaster(masterId);
+        masterRepository.deleteById(masterId);
+    }
+
+
+
+    // не надо
+    public Optional<MasterDTO> getMasterByPhone(String phone) {
+        return masterRepository.findByPhone(phone).map(dtoConverter::convertToMasterDTO);
+    }
+
+    // не надо
+    public Optional<MasterDTO> getMasterByLogin(String login) {
+        return masterRepository.findByLogin(login).map(dtoConverter::convertToMasterDTO);
     }
 }
